javamain-javacc/examples/official-examples/example.jj
options{
        STATIC = true;
        OUTPUT_DIRECTORY = "../../src/main/java/official/examples";
}

PARSER_BEGIN(Example)
/** Simple brace matcher. */
package official.examples;
public class Example {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    Example parser = new Example(System.in);
    parser.Input();
  }
}
PARSER_END(Example)

/** Root production. */
void Input() :
{}
{
  MatchedBraces() ("\n"|"\r")* <EOF>
//    MatchedBraces() <EOF>
}

/** Brace matching production. */
void MatchedBraces() :
{}
{
  "{" [ MatchedBraces() ] "}"
}
